--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>dk.fitfit.event</groupId>
-	<artifactId>event-aggregation</artifactId>
+	<artifactId>event-collecting</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>event-aggregation</name>
+	<name>event-collecting</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -41,6 +41,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>21.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
@@ -60,6 +65,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
