--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,14 @@ spring:
   jackson:
     serialization:
       write-dates-as-timestamps: false
+
+---
+
+spring:
+  profiles: test
+  datasource:
+    url: jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    driverClassName: org.h2.Driver
+  jpa:
+    hibernate:
+      ddl-auto: create
